--- a/frontend/public/styles.css
+++ b/frontend/public/styles.css
@@ -1,3 +1,10 @@
 body {
     background-color: black;
 }
+table {
+    max-width: 100%;
+    overflow-x: auto;
+    margin-left: auto;
+    margin-right: auto;
+    border-spacing: 10px;
+}
