--- a/frontend/public/styles.css
+++ b/frontend/public/styles.css
@@ -6,5 +6,6 @@ table {
     overflow-x: auto;
     margin-left: auto;
     margin-right: auto;
-    border-spacing: 10px;
+    border-spacing: 8px;
+    font-size: large;
 }
