stage 5 range ok
range ftw!!

--- a/frontend/public/styles.css
+++ b/frontend/public/styles.css
@@ -109,3 +109,8 @@ table {
     background-image: var(--imgVar);
     background-size: cover;
 }
+.unitRange{
+    z-index: 5;
+    background-color: white;
+    opacity: 0.5;
+}
