balance and bugs
only skills left

--- a/frontend/public/styles.css
+++ b/frontend/public/styles.css
@@ -82,6 +82,7 @@
     --protect-sky-2:  url(img/effects/protect-sky-2.png);
     --protect-sky-3:  url(img/effects/protect-sky-3.png);
     --boot_tetonalli: url(img/effects/boot_tetonalli.png);
+    --E2-or-E1-Icon-9: url(img/effects/E2-or-E1-Icon-9.png);
 
     /* Buttons */
     --cancel: url(img/effects/cancel.png);
