bugs and quality

--- a/frontend/public/styles.css
+++ b/frontend/public/styles.css
@@ -96,7 +96,7 @@
 
     /* Units */
     --advocate-blue:      url(img/characters/advocate-blue.png);
-    --assasin-blue:       url(img/characters/assasin-blue.png);
+    --assassin-blue:       url(img/characters/assassin-blue.png);
     --commoner-blue:      url(img/characters/commoner-blue.png);
     --halberdier-blue:    url(img/characters/halberdier-blue.png);
     --kira-blue:          url(img/characters/kira-blue.png);
@@ -106,7 +106,7 @@
     --priestess-blue:           url(img/characters/priestess-blue.png);
 
     --advocate-red:       url(img/characters/advocate-red.png);
-    --assasin-red:        url(img/characters/assasin-red.png);
+    --assassin-red:        url(img/characters/assassin-red.png);
     --commoner-red:       url(img/characters/commoner-red.png);
     --halberdier-red:     url(img/characters/halberdier-red.png);
     --kira-red:           url(img/characters/kira-red.png);
@@ -116,7 +116,7 @@
     --priestess-red:            url(img/characters/priestess-red.png);
 
     --advocate-green:       url(img/characters/advocate-green.png);
-    --assasin-green:        url(img/characters/assasin-green.png);
+    --assassin-green:        url(img/characters/assassin-green.png);
     --commoner-green:       url(img/characters/commoner-green.png);
     --halberdier-green:     url(img/characters/halberdier-green.png);
     --kira-green:           url(img/characters/kira-green.png);
@@ -126,7 +126,7 @@
     --priestess-green:            url(img/characters/priestess-green.png);
 
     --advocate-purple:       url(img/characters/advocate-purple.png);
-    --assasin-purple:        url(img/characters/assasin-purple.png);
+    --assassin-purple:        url(img/characters/assassin-purple.png);
     --commoner-purple:       url(img/characters/commoner-purple.png);
     --halberdier-purple:     url(img/characters/halberdier-purple.png);
     --kira-purple:           url(img/characters/kira-purple.png);
@@ -136,7 +136,7 @@
     --priestess-purple:            url(img/characters/priestess-purple.png);
 
     --advocate-orange:       url(img/characters/advocate0.png);
-    --assasin-orange:        url(img/characters/assasin0.png);
+    --assassin-orange:        url(img/characters/assassin0.png);
     --commoner-orange:       url(img/characters/commoner0.png);
     --halberdier-orange:     url(img/characters/halberdier0.png);
     --kira-orange:           url(img/characters/kira0.png);
@@ -146,7 +146,7 @@
     --priestess-orange:            url(img/characters/priestess0.png);
 
     --advocate-lime:       url(img/characters/advocate0.png);
-    --assasin-lime:        url(img/characters/assasin0.png);
+    --assassin-lime:        url(img/characters/assassin0.png);
     --commoner-lime:       url(img/characters/commoner0.png);
     --halberdier-lime:     url(img/characters/halberdier0.png);
     --kira-lime:           url(img/characters/kira0.png);
