--- a/frontend/public/styles.css
+++ b/frontend/public/styles.css
@@ -214,7 +214,7 @@ table {
     background-color: white;
     opacity: 0.5;
 }
-.unitHarmfullRange{
+.unitharmfulRange{
     z-index: 5;
     background-color: red;
     opacity: 0.4;
